--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "emotion": "^10.0.27",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
+    "jest-emotion": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1"
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.12.0"
   }
 }
