--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,9 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "react-test-renderer": "^16.12.0"
+    "react-redux": "^7.1.3",
+    "react-test-renderer": "^16.12.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
