--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0"
   }
 }
